data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4448.wast
;; 7. **Test Description**:    - Set up a function with a `call_indirect` instruction and intentionally leave the table index uninitialized or null.    - **Constraint**: Ensurance of handling uninitialized or null table indices.    - **CFG Relation**: CFG should lead to a direct trapping path when encountering null/uninitialized indices, demonstrating proper initialization checks.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table funcref)
    (func $uninitialized-table-index
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "element segment does not fit"
)